# controllersRoute/companyController.go
@@ -4,6 +4,7 @@ package controllersroute
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 	"strings"
 	"time"
 
@@ -35,19 +36,19 @@ type IuserController interface {
 
 	RegisterCompany(ctx *gin.Context)
 	GetCompanyDetail(ctx *gin.Context)
+	UploadCompanyDocuments(ctx *gin.Context)
+	GetCompanyByCompanyName(ctx *gin.Context)
 }
 
 // RegisterCompany godoc
 // @Summary Register new company
 // @Produce json
 // @Tags company
-// @Param user body models.CompanyDocumentIn true "Company details"
+// @Param user body models.CompanyDetailsIn true "Company details"
 // @Success 200 {object} models.ResponseMessage
-// @Router /api/company/RegisterCompany [post]
+// @Router /api/company/CompanyRegistration [post]
 func (ts userService) RegisterCompany(ctx *gin.Context) {
-	requestBody := models.CompanyDocumentIn{}
-	//CompanyDocumentOut := models.CompanyDocumentOut{}
-	reponseUser := models.Tbl_users{}
+	requestBody := models.CompanyDetailsIn{}
 	Registered := models.Tbl_Registered{}
 	if err := ctx.ShouldBindJSON(&requestBody); err != nil {
 		//util.LogError(err)
@@ -55,27 +56,21 @@ func (ts userService) RegisterCompany(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, err)
 	}
 
-	// // validate company username and email address exist
-	// if err := ts.DbGorm.Table("Tbl_Users").Where("Email=? and Id=?", requestBody.Email, requestBody.UserId).Find(&reponseUser).Error; err != nil {
-	// 	if err.Error() != "" {
-	// 		ResponBody.ResponseCode = "01"
-	// 		ResponBody.ResponseMessage = err.Error()
-	// 		//util.LogError(err)
-	// 		ctx.JSON(http.StatusBadRequest, ResponBody)
-	// 		return
-	// 	}
-	// }
+	docheck := newregistered.GetCompanyByCompanyName("testing")
 
-	_, err := newuserService.GetUserByEmailandUserId(strings.ToUpper(requestBody.Email), requestBody.UserId)
-	if err.Error() != "" {
+	fmt.Println(docheck)
+
+	//check profile exist
+	retUser, err := newuserService.GetUserByEmailandUserId(strings.ToUpper(requestBody.Email), requestBody.UserId)
+	if err != nil {
 		ResponBody.ResponseCode = "01"
 		ResponBody.ResponseMessage = err.Error()
 		//util.LogError(err)
 		ctx.JSON(http.StatusBadRequest, ResponBody)
 		return
 	}
-
-	if reponseUser.Username == "" {
+	fmt.Println(retUser.Username)
+	if retUser.Username == "" {
 		ResponBody.ResponseCode = "01"
 		ResponBody.ResponseMessage = "Invalid user details supplied"
 		ctx.JSON(http.StatusBadRequest, ResponBody)
@@ -102,8 +97,6 @@ func (ts userService) RegisterCompany(ctx *gin.Context) {
 	Registered.Dateapproved = time.Now()
 
 	query, err := newregistered.GetCompanyByCompanyNameAndUserId(Registered.Userid, 0, Registered.Companyname)
-	//queryCheck checks if document already been uploaded
-	//queryCheck := ts.DbGorm.Debug().Table("Tbl_Registered").Where("UserId =? and CompanyName=? and StatusId=?", Registered.Userid, Registered.Companyname, 0).Select(&CompanyDocumentOut).Error
 	if err != nil {
 		ResponBody.ResponseCode = "01"
 		ResponBody.ResponseMessage = err.Error()
@@ -118,8 +111,7 @@ func (ts userService) RegisterCompany(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, ResponBody)
 		return
 	}
-	//upload document
-	//query := ts.DbGorm.Debug().Table("Tbl_Registered").Create(&Registered).Error
+	//register company details
 	createComp, err := newregistered.RegisterCompany(Registered)
 	if err != nil {
 		ResponBody.ResponseCode = "01"
@@ -128,6 +120,8 @@ func (ts userService) RegisterCompany(ctx *gin.Context) {
 		//util.LogError(query)
 		return
 	}
+	//upload company detail
+
 	ResponBody.ResponseCode = "00"
 	ResponBody.ResponseMessage = fmt.Sprintf("Document uploaded successfully with record id %d", createComp.Id)
 	ctx.JSON(http.StatusBadRequest, ResponBody)
@@ -137,20 +131,18 @@ func (ts userService) RegisterCompany(ctx *gin.Context) {
 // @Summary Gets company details by email address and company name.
 // @Produce json
 // @Tags company
-// @Success 200 {object} models.CompanyDocumentOut
-// @Router /api/company/GetComplaintByRefID/{Email}/{CompanyName} [get]
+// @Success 200 {object} models.CompanyDetailsOut
+// @Router /api/company/GetComplaintByRefID/{email}/{companyname} [get]
 func (ts userService) GetCompanyDetail(ctx *gin.Context) {
-	email := ctx.Param("Email")
-	CompanyName := ctx.Param("CompanyName")
-	CompanyDocumentOut := models.CompanyDocumentOut{}
+	email := ctx.Param("email")
+	CompanyName := ctx.Param("companyname")
+	CompanyDocumentOut := models.CompanyDetailsOut{}
 	reponseUser := models.Tbl_users{}
 
 	if err := ts.DbGorm.Debug().Table("Tbl_Users").Where("Email=? ", strings.ToUpper(email)).Find(&reponseUser).Error; err != nil {
 		if err.Error() != "" && err.Error() != "record not found" {
-			fmt.Println("record 1")
 			ResponBody.ResponseCode = "01"
 			ResponBody.ResponseMessage = err.Error()
-			fmt.Println("record 2")
 			//util.LogError(err)
 			ctx.JSON(http.StatusBadRequest, ResponBody)
 			return
@@ -158,16 +150,13 @@ func (ts userService) GetCompanyDetail(ctx *gin.Context) {
 	}
 
 	if reponseUser.Username == "" {
-		fmt.Println("GetCompanyDetail4")
 		ResponBody.ResponseCode = "01"
 		ResponBody.ResponseMessage = "Invalid user details supplied"
 		ctx.JSON(http.StatusBadRequest, ResponBody)
 		return
 	}
-	fmt.Println("GetCompanyDetail5")
 	query := ts.DbGorm.Debug().Table("Tbl_Registered").Where("CompanyName=?", strings.ToUpper(CompanyName)).Find(&CompanyDocumentOut).Error
 	if query != nil {
-		fmt.Println("GetCompanyDetail6")
 		ResponBody.ResponseCode = "01"
 		ResponBody.ResponseMessage = query.Error()
 		//util.LogError(err)
@@ -181,6 +170,79 @@ func (ts userService) GetCompanyDetail(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, ResponBody)
 		return
 	}
-	fmt.Println("GetCompanyDetail7")
 	ctx.JSON(http.StatusBadRequest, CompanyDocumentOut)
+}
+
+// UploadCompanyDocuments godoc
+// @Summary Upload company document
+// @Produce json
+// @Tags company
+// @Param user body models.ImportationDocumentIn true "Upload company document"
+// @Success 200 {object} models.ResponseMessage
+// @Router /api/company/UploadCompanyDocuments [post]
+func (ts userService) UploadCompanyDocuments(ctx *gin.Context) {
+	req := models.ImportationDocumentIn{}
+	ctx.ShouldBindJSON(&req)
+	if req.Documentname == "" || req.Documentpath == "" {
+		ResponBody.ResponseCode = "01"
+		ResponBody.ResponseMessage = "Document name is required."
+		ctx.JSON(http.StatusBadRequest, ResponBody)
+		return
+	}
+	//check if company had been created
+	compId, err := strconv.Atoi(req.Importationid)
+	if err != nil {
+		ResponBody.ResponseCode = "01"
+		ResponBody.ResponseMessage = "CompanyId must be integer"
+		ctx.JSON(http.StatusBadRequest, ResponBody)
+		return
+	}
+	rec, err := newregistered.GetCompanyByCompanyId(compId)
+	if err != nil {
+		ResponBody.ResponseCode = "01"
+		ResponBody.ResponseMessage = err.Error()
+		ctx.JSON(http.StatusBadRequest, ResponBody)
+		return
+	}
+	fmt.Println(rec.Accountnumber)
+	if rec.Companyname == "" {
+		ResponBody.ResponseCode = "01"
+		ResponBody.ResponseMessage = "invalid company id supplied"
+		ctx.JSON(http.StatusBadRequest, ResponBody)
+		return
+	}
+	docuRec := models.Tbl_ImportationDocument{
+		Importationid: req.Importationid,
+		Documentname:  req.Documentname,
+		Documentpath:  req.Documentpath,
+		Dateadded:     time.Now(),
+		Statusid:      0,
+	}
+
+	//do upload
+	ret, err := newregistered.UploadDocument(docuRec)
+	if err != nil {
+		ResponBody.ResponseCode = "01"
+		ResponBody.ResponseMessage = err.Error()
+		ctx.JSON(http.StatusBadRequest, ResponBody)
+		return
+	}
+	if ret == 1 && err == nil {
+		ResponBody.ResponseCode = "00"
+		ResponBody.ResponseMessage = "Document uploaded successfully."
+		ctx.JSON(http.StatusOK, ResponBody)
+	}
+}
+
+// GetCompanyByCompanyName godoc
+// @Summary Gets company details bycompany name.
+// @Produce json
+// @Tags company
+// @Success 200 {object} models.CompanyDetailsOut
+// @Router /api/company/GetComplaintByRefID/{Email}/{CompanyName} [get]
+func (ts userService) GetCompanyByCompanyName(ctx *gin.Context) {
+	CompanyName := ctx.Param("companyname")
+	getCompany := newregistered.GetCompanyByCompanyName(CompanyName)
+	ctx.JSON(http.StatusOK, getCompany)
+
 }
