# datasource/sqlserver/registered_service.go
@@ -17,26 +17,45 @@ func NewRegistered(db *gorm.DB) IRegistered {
 }
 
 type IRegistered interface {
-	GetCompanyByCompanyName(CompanyName string) models.CompanyDocumentOut
-	GetCompanyByCompanyNameAndUserId(UserId, StatusId int, CompanyName string) (models.CompanyDocumentOut, error)
+	GetCompanyByCompanyName(CompanyName string) models.CompanyDetailsOut
+	GetCompanyByCompanyNameAndUserId(UserId, StatusId int, CompanyName string) (models.CompanyDetailsOut, error)
 	RegisterCompany(register models.Tbl_Registered) (models.Tbl_Registered, error)
+	GetCompanyByCompanyId(UserId int) (models.CompanyDetailsOut, error)
+	UploadDocument(compDocument models.Tbl_ImportationDocument) (int, error)
 }
 
-func (db dbconnect) GetCompanyByCompanyName(CompanyName string) models.CompanyDocumentOut {
-	company := models.CompanyDocumentOut{}
-	if retQuery := db.DbGorm.Table("Tbl_Registered").Where("CompanyName=?", strings.ToUpper(CompanyName)).Find(&company).Error; retQuery != nil {
-		fmt.Println(retQuery)
+func (db dbconnect) GetCompanyByCompanyName(CompanyName string) models.CompanyDetailsOut {
+	registered := models.CompanyDetailsOut{}
+	if retQuery := db.DbGorm.Debug().Table(`Tbl_Registered`).Where(`CompanyName=?`, strings.ToUpper(CompanyName)).Find(&registered).Error; retQuery != nil {
+		fmt.Println(retQuery.Error())
 	}
-	return company
+	return registered
 }
 
-func (db dbconnect) GetCompanyByCompanyNameAndUserId(UserId, StatusId int, CompanyName string) (models.CompanyDocumentOut, error) {
-	company := models.CompanyDocumentOut{}
-	queryCheck := db.DbGorm.Table("Tbl_Registered").Where("UserId =? and CompanyName=? and StatusId=?", UserId, CompanyName, StatusId).Select(&company).Error
+func (db dbconnect) GetCompanyByCompanyNameAndUserId(UserId, StatusId int, CompanyName string) (models.CompanyDetailsOut, error) {
+	company := models.CompanyDetailsOut{}
+	queryCheck := db.DbGorm.Table(`Tbl_Registered`).Where(`UserId =? and CompanyName=? and StatusId=?`, UserId, CompanyName, StatusId).Select(&company).Error
 	return company, queryCheck
 }
 
 func (db dbconnect) RegisterCompany(register models.Tbl_Registered) (models.Tbl_Registered, error) {
-	retQuery := db.DbGorm.Table("Tbl_Registered").Create(&register).Error
+	retQuery := db.DbGorm.Table(`Tbl_Registered`).Create(&register).Error
 	return register, retQuery
+}
+
+func (db dbconnect) GetCompanyByCompanyId(UserId int) (models.CompanyDetailsOut, error) {
+	company := models.CompanyDetailsOut{}
+	fmt.Println("get here 1")
+	fmt.Println(UserId)
+	queryCheck := db.DbGorm.Debug().Table(`Tbl_Registered`).Where(`Id =?`, UserId).First(&company).Error
+	if queryCheck != nil {
+		fmt.Println(queryCheck.Error())
+	}
+	fmt.Println(company.Serviceid)
+	return company, nil
+}
+
+func (db dbconnect) UploadDocument(compDocument models.Tbl_ImportationDocument) (int, error) {
+	retQuery := db.DbGorm.Debug().Table(`tbl_Importation_Document`).Create(&compDocument).Error
+	return compDocument.Id, retQuery
 }
