# models/tbl_KYC.go
@@ -4,49 +4,45 @@ import "time"
 
 type Tbl_KYC struct {
 	Id                         int       `json:"id" validate:"omitempty"`
-	RegisteredId               int       `json:"StatusId" validate:"omitempty"`
-	CertificateOfIncorporation string    `json:"Certificateofincorporation" validate:"omitempty"`
-	MemorandomOfAssociation    string    `json:"Memorandomofassociation" validate:"omitempty"`
-	ArticlesOfAssociation      string    `json:"Articlesofassociation" validate:"omitempty"`
-	PowerOfAttorneyGranted     string    `json:"Powerofattorneygranted" validate:"omitempty"`
-	ValidBusinessLicense       string    `json:"Validbusinesslicense" validate:"omitempty"`
-	AuditedFinancialStatement  string    `json:"Auditedfinancialstatement" validate:"omitempty"`
-	TaxClearanceCertificate    string    `json:"Taxclearancecertificate" validate:"omitempty"`
-	DateAdded                  time.Time `json:"Dateadded" validate:"omitempty"`
-	StatusId                   int       `json:"Statusid" validate:"omitempty"`
+	Registeredid               int       `json:"Registeredid" validate:"omitempty"`
+	Certificateofincorporation string    `json:"Certificateofincorporation" validate:"omitempty"`
+	Memorandomofassociation    string    `json:"Memorandomofassociation" validate:"omitempty"`
+	Articlesofassociation      string    `json:"Articlesofassociation" validate:"omitempty"`
+	Powerofattorneygranted     string    `json:"Powerofattorneygranted" validate:"omitempty"`
+	Validbusinesslicense       string    `json:"Validbusinesslicense" validate:"omitempty"`
+	Auditedfinancialstatement  string    `json:"Auditedfinancialstatement" validate:"omitempty"`
+	Taxclearancecertificate    string    `json:"Taxclearancecertificate" validate:"omitempty"`
+	Dateadded                  time.Time `json:"Dateadded" validate:"omitempty"`
+	Statusid                   int       `json:"Statusid" validate:"omitempty"`
 	Approvedby                 int       `json:"Approvedby" validate:"omitempty"`
-	ApprovalComment            string    `json:"Approvalcomment" validate:"omitempty"`
-	DateApproved               time.Time `json:"Dateapproved" validate:"omitempty"`
+	Approvalcomment            string    `json:"Approvalcomment" validate:"omitempty"`
+	Dateapproved               time.Time `json:"Dateapproved" validate:"omitempty"`
 }
 
 type KYCIn struct {
-	RegisteredId               int       `json:"StatusId" validate:"omitempty"`
-	CertificateOfIncorporation string    `json:"Certificateofincorporation" validate:"omitempty"`
-	MemorandomOfAssociation    string    `json:"Memorandomofassociation" validate:"omitempty"`
-	ArticlesOfAssociation      string    `json:"Articlesofassociation" validate:"omitempty"`
-	PowerOfAttorneyGranted     string    `json:"Powerofattorneygranted" validate:"omitempty"`
-	ValidBusinessLicense       string    `json:"Validbusinesslicense" validate:"omitempty"`
-	AuditedFinancialStatement  string    `json:"Auditedfinancialstatement" validate:"omitempty"`
-	TaxClearanceCertificate    string    `json:"Taxclearancecertificate" validate:"omitempty"`
-	DateAdded                  time.Time `json:"Dateadded" validate:"omitempty"`
-	StatusId                   int       `json:"Statusid" validate:"omitempty"`
-	Approvedby                 int       `json:"Approvedby" validate:"omitempty"`
-	ApprovalComment            string    `json:"Approvalcomment" validate:"omitempty"`
-	DateApproved               time.Time `json:"Dateapproved" validate:"omitempty"`
+	Registeredid               int    `json:"Registeredid" validate:"omitempty"`
+	Certificateofincorporation string `json:"Certificateofincorporation" validate:"omitempty"`
+	Memorandomofassociation    string `json:"Memorandomofassociation" validate:"omitempty"`
+	Articlesofassociation      string `json:"Articlesofassociation" validate:"omitempty"`
+	Powerofattorneygranted     string `json:"Powerofattorneygranted" validate:"omitempty"`
+	Validbusinesslicense       string `json:"Validbusinesslicense" validate:"omitempty"`
+	Auditedfinancialstatement  string `json:"Auditedfinancialstatement" validate:"omitempty"`
+	Taxclearancecertificate    string `json:"Taxclearancecertificate" validate:"omitempty"`
 }
 
 type KYCOut struct {
-	RegisteredId               int       `json:"StatusId" validate:"omitempty"`
-	CertificateOfIncorporation string    `json:"Certificateofincorporation" validate:"omitempty"`
-	MemorandomOfAssociation    string    `json:"Memorandomofassociation" validate:"omitempty"`
-	ArticlesOfAssociation      string    `json:"Articlesofassociation" validate:"omitempty"`
-	PowerOfAttorneyGranted     string    `json:"Powerofattorneygranted" validate:"omitempty"`
-	ValidBusinessLicense       string    `json:"Validbusinesslicense" validate:"omitempty"`
-	AuditedFinancialStatement  string    `json:"Auditedfinancialstatement" validate:"omitempty"`
-	TaxClearanceCertificate    string    `json:"Taxclearancecertificate" validate:"omitempty"`
-	DateAdded                  time.Time `json:"Dateadded" validate:"omitempty"`
-	StatusId                   int       `json:"Statusid" validate:"omitempty"`
+	Id                         int       `json:"id" validate:"omitempty"`
+	Registeredid               int       `json:"Registeredid" validate:"omitempty"`
+	Certificateofincorporation string    `json:"Certificateofincorporation" validate:"omitempty"`
+	Memorandomofassociation    string    `json:"Memorandomofassociation" validate:"omitempty"`
+	Articlesofassociation      string    `json:"Articlesofassociation" validate:"omitempty"`
+	Powerofattorneygranted     string    `json:"Powerofattorneygranted" validate:"omitempty"`
+	Validbusinesslicense       string    `json:"Validbusinesslicense" validate:"omitempty"`
+	Auditedfinancialstatement  string    `json:"Auditedfinancialstatement" validate:"omitempty"`
+	Taxclearancecertificate    string    `json:"Taxclearancecertificate" validate:"omitempty"`
+	Dateadded                  time.Time `json:"Dateadded" validate:"omitempty"`
+	Statusid                   int       `json:"Statusid" validate:"omitempty"`
 	Approvedby                 int       `json:"Approvedby" validate:"omitempty"`
-	ApprovalComment            string    `json:"Approvalcomment" validate:"omitempty"`
-	DateApproved               time.Time `json:"Dateapproved" validate:"omitempty"`
+	Approvalcomment            string    `json:"Approvalcomment" validate:"omitempty"`
+	Dateapproved               time.Time `json:"Dateapproved" validate:"omitempty"`
 }
